@@ -95,8 +95,11 @@ gzip $RPM_BUILD_ROOT/%{_infodir}/cvs* || true
 
 %post
 /sbin/install-info /%{_infodir}/cvs.info.gz /%{_infodir}/dir
-/sbin/install-info /%{_infodir}/cvsclient.info.gz /%{_infodir}/dir 
-
+/sbin/install-info /%{_infodir}/cvsclient.info.gz /%{_infodir}/dir
+# Remove any existing uncompressed versions of the info files since
+# install-info doesn't and info doesn't seem to be very good at spotting that
+# its uncompressed cache is out of date.
+rm -f /%{_infodir}/cvs.info /%{_infodir}/cvs.info-? /%{_infodir}/cvs.info-??
 %preun
 if [ $1 = 0 ]; then
 # uninstall the info reference in the dir file
